force-app/main/default/objects/Post_Service_Header__c/Post_Service_Header__c.object-meta.xml
<CustomObject>
    <label>Post Service Header</label>
    <nameField>
        <displayFormat>PSH-{0000000}</displayFormat>
        <label>Post Service Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Service Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>