force-app/main/default/objects/Post_Service_Header__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Post Service Headers</relationshipLabel>
    <relationshipName>Post_Service_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>