force-app/main/default/objects/Post_Service_Header__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <formula>Text(Registered_Vehicle__r.Branch__c)</formula>
    <label>Branch</label>
    <type>Text</type>
</CustomField>