force-app/main/default/objects/Post_Service_Header__c/fields/CSAT_Service_Experience__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Service_Experience__c</fullName>
    <label>CSAT Service Experience (1-10)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>