force-app/main/default/objects/Post_Service_Header__c/fields/Last_Service_KM__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_KM__c</fullName>
    <formula>Registered_Vehicle__r.Last_Service_Booking_KM__c</formula>
    <label>Last Service KM</label>
    <type>Text</type>
</CustomField>