force-app/main/default/objects/Post_Service_Header__c/fields/Magic_ID__c.field-meta.xml
<CustomField>
    <fullName>Magic_ID__c</fullName>
    <label>Magic ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>