force-app/main/default/objects/Post_Service_Header__c/fields/Negative_Survey__c.field-meta.xml
<CustomField>
    <fullName>Negative_Survey__c</fullName>
    <formula>OR(NPS_Service_Experience__c &lt; 8, CSAT_SA__c &lt;2.5, CSAT_Service_Experience__c &lt;5)</formula>
    <label>Negative Survey</label>
    <type>Checkbox</type>
</CustomField>