force-app/main/default/objects/Post_Service_Header__c/fields/NPS_Indicator__c.field-meta.xml
<CustomField>
    <fullName>NPS_Indicator__c</fullName>
    <formula>IF(NPS_Service_Experience__c&gt;8, 1,IF(NPS_Service_Experience__c&lt;7, -1, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Indicator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>