force-app/main/default/objects/Post_Service_Header__c/fields/NPS_Service_Experience__c.field-meta.xml
<CustomField>
    <fullName>NPS_Service_Experience__c</fullName>
    <label>NPS Service Experience (1-10)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>