force-app/main/default/objects/Post_Service_Header__c/fields/OPCREATE__c.field-meta.xml
<CustomField>
    <fullName>OPCREATE__c</fullName>
    <description>Service Advisors</description>
    <label>OPCREATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>