force-app/main/default/objects/Post_Service_Header__c/fields/PDPA__c.field-meta.xml
<CustomField>
    <fullName>PDPA__c</fullName>
    <description>IF(INCLUDES(Account__r.PDPA__pc, &apos;SMS&apos;), &apos;SMS&apos;, null)
IF(YEAR(DATEVALUE(CreatedDate))&gt;2021 , &apos;SMS&apos;, null)</description>
    <formula>IF(DATEVALUE(CreatedDate)&gt; DATE(2021, 02, 28) , &apos;SMS&apos;, null)</formula>
    <label>PDPA</label>
    <type>Text</type>
</CustomField>