force-app/main/default/objects/Post_Service_Header__c/fields/Post_Service_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Service_Survey_Date__c</fullName>
    <label>Post Service Survey Date</label>
    <type>Date</type>
</CustomField>