force-app/main/default/objects/Post_Service_Header__c/fields/REGNO__c.field-meta.xml
<CustomField>
    <fullName>REGNO__c</fullName>
    <description>Vehicle registration number</description>
    <label>Vehicle Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>