force-app/main/default/objects/Post_Service_Header__c/fields/Send_Second_SMS__c.field-meta.xml
<CustomField>
    <fullName>Send_Second_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Second SMS</label>
    <type>Checkbox</type>
</CustomField>