force-app/main/default/objects/Post_Service_Header__c/fields/Service_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Service_Advisor__c</fullName>
    <label>Service Advisor</label>
    <length>200</length>
    <type>Text</type>
</CustomField>