force-app/main/default/objects/Post_Service_Header__c/fields/VALUE__c.field-meta.xml
<CustomField>
    <fullName>VALUE__c</fullName>
    <label>VALUE</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>