force-app/main/default/objects/Post_Service_Header__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Advisor__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Send_First_SMS__c</columns>
    <columns>Send_Second_SMS__c</columns>
    <columns>Post_Service_Survey__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>INVNO__c</columns>
    <columns>Chasis__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>